<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#121212">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/email"
        android:textColorHint="#B7B7B7"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:elevation="4dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:textColorHint="#B7B7B7"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:padding="16dp"
        android:elevation="4dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#424242"
        android:text="@string/login"
        android:textColorHint="#B7B7B7"
        android:background="@drawable/rounded_button"
        android:padding="12dp"
        android:elevation="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColorHint="#B7B7B7"
        android:layout_marginBottom="12dp"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColorHint="#B7B7B7"
        android:background="@drawable/rounded_button"
        android:padding="12dp"
        android:elevation="6dp"/>


</LinearLayout>
