<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <!-- Заголовок устройства -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Device Name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <!-- Время обновления -->
            <TextView
                android:id="@+id/updateTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_text"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center"
                android:layout_marginTop="4dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <!-- Добавление графика -->
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />
            </androidx.cardview.widget.CardView>

            <!-- Плитки для статусов -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/waterPumpTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/status_pomp" />
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/buttonToggleWaterPump"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/bytton_change" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/windowTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/status_window" />
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/buttonToggleVentilation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/bytton_change" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/moisture1TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/moisture1_text" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/moisture2TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/moisture2_text" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/temperatureTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/temp_text" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/humidityTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/humidity_text" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/liquid_sensor_waterTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/liquid_sensor_water_text" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/liquid_sensor_plantTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/liquid_sensor_plant_text" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.gesture.GestureOverlayView
                        android:id="@+id/gestures3"
                        android:layout_width="fill_parent"
                        android:layout_height="130dp">
                    </android.gesture.GestureOverlayView>

                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>